--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors{
+        paid{
+
+        }
+        free{
+
+        }
+    }
 }
 
 dependencies {
@@ -28,7 +36,7 @@ dependencies {
     compile project(':libjava')
     compile project(':androidlibrary')
     compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.google.android.gms:play-services-ads:9.8.0'
+    freeCompile 'com.google.android.gms:play-services-ads:9.8.0'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile 'com.google.http-client:google-http-client-android:1.20.0'
     compile 'com.google.api-client:google-api-client:1.20.0'
