--- a/app/src/paid/AndroidManifest.xml
+++ b/app/src/paid/AndroidManifest.xml
@@ -24,6 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <!-- Include the AdActivity configChanges and theme. -->
     </application>
 
 </manifest>
