Added tests for response of App engine, AsyncFailTest is to see if we dont get a bad response

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,13 @@ dependencies {
     })
     compile project(':libjava')
     compile project(':androidlibrary')
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    freeCompile 'com.google.android.gms:play-services-ads:9.8.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    freeCompile 'com.google.android.gms:play-services-ads:11.0.4'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile 'com.google.http-client:google-http-client-android:1.20.0'
     compile 'com.google.api-client:google-api-client:1.20.0'
     compile project(path: ':backend', configuration: 'android-endpoints')
+
+    //test dependencies
+    testCompile 'junit:junit:4.12'
 }
